# NSULabs

OOPJava/lab1/: pom.xml
OOPJava/lab2/: Task.md  pom.xml
OPP/lab1/: task.md
OPP/lab2/: lab2_parallel.cpp  task.md
OPP/lab3/: lab3_parallel.cpp  task.md
OPP/lab4/: lab4_parallel.cpp
OPP/lab5/: task.md
bd/project1/: companies.php  company.php  find.php  find_partner.php  find_phone.php  index.php  people.php  person.php  update_bd.php
comp/opencv/: opencv.cpp  task.md
comp/vectorization/: blas.cpp  simd.cpp  simple.cpp  task.md
networks2/lab1/: lab1  lab1.cpp
networks2/lab3/: lab3.py
networks2/lab5/: proxy.go
oop-c++/lab1/: CMakeLists.txt  FlatMap.cpp  Header.h  Main.cpp  Test.cpp  task.md
oop-c++/lab2/: .gitignore  CMakeLists.txt  Converter.cpp  Converter.h  Exceptions.h  Header.h  Main.cpp  PrepearingConversion.h  ReaderWriter.h  ReaderWriterData.h  ReaderWriterPrepearing.cpp  TextParser.cpp  TextParser.h  task.md
oop-c++/lab3/: CMakeLists.txt  Game.cpp  Game.h  GameContext.cpp  GameEngine.cpp  GameEngine.h  Main.cpp  Objects.cpp  Objects.h  task.md
oop-c++/lab4.1/: Main.cpp  task.md
oop-c++/lab4.2/: CMakeLists.txt  Main.cpp  task.md
oop-c++/lab4.3/: CMakeLists.txt  Header.h  Main.cpp  task.md
oop-java/lab1/: Task.md
oop-java/lab2/: Task.md
oop-java/lab3/: Task.md  pom.xml
oop-java/lab4/: pom.xml
opp/lab1/: lab1_collective_comms.cpp  lab1_point_to_point.cpp  lab1_sequential.cpp  task.md
os/: client_domain_s.c  client_tcp.c  client_udp.c  my_heap.cpp  pipe.cpp  server_domain_s.c  server_select.c  server_tcp.c  server_udp.c
(+150 files in other folders)
